cabal-version:          3.0
name:                   miso-mario
version:                0.1

common warnings
  ghc-options:
    -funbox-strict-fields -O2 -ferror-spans -fspecialise-aggressively -Wall

common wasm
  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM

executable app
  import:
    wasm, warnings
  main-is:
    Main.hs
  build-depends:
    base < 5, miso
  hs-source-dirs:
    src
  default-language:
    Haskell2010
